--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "@scottglz/trivia2025-shared",
-  "version": "1.0.3",
+  "version": "1.0.8",
+  "main": "./dist",
   "scripts": {
-    "publish": "npm publish --access public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "tsc",
+    "predeploy": "npm run build",
+    "deploy": "npm publish --access public"
   },
   "author": "scott.glazer@igrafx.com",
   "license": "MIT",
-  "repository": "github:scottglz/trivia2025-shared",
-  "description": "shared code for project"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/scottglz/trivia2025-shared.git"
+  },
+  "description": "shared code for project",
+  "devDependencies": {
+    "rimraf": "^6.0.1",
+    "typescript": "^5.7.3"
+  }
 }
